# libfx

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
cmake/: winui.cmake
cmake/ports/webkitgtk/: port.cmake
example/: CMakeLists.txt  main.c
example/ios/: CMakeLists.txt  Info.plist
example/macos/: CMakeLists.txt  Info.plist
include/: fx.h
include/fx/: image.h  install.h  message.h  node.h  screen.h  scroll-view.h  text-input.h  text.h  video.h  view.h  web-view.h  window.h
src/: channel.c  channel.h  message-queue.c  message-queue.h  message.c  platform.h
src/darwin/: fx.h  fx.m  image.h  image.m  node.m  platform.h  platform.m  screen.h  screen.m  scroll-view.h  scroll-view.m  shared.h  text-input.h  text-input.m  text.h  text.m  video.h  video.m  view.h  view.m  web-view.h  web-view.m  window.h  window.m
src/darwin/appkit/: fx.h  fx.m  image.h  image.m  node.m  platform.m  screen.h  screen.m  scroll-view.h  scroll-view.m  text-input.h  text-input.m  text.h  text.m  video.h  video.m  view.h  view.m  web-view.h  web-view.m  window.h  window.m
src/darwin/uikit/: fx.h  fx.m  image.h  image.m  node.m  screen.h  screen.m  scroll-view.h  scroll-view.m  text-input.h  text-input.m  text.h  text.m  video.h  video.m  view.h  view.m  web-view.h  web-view.m  window.h  window.m
src/ios/: fx.h  fx.m  image.h  image.m  node.m  platform.h  platform.m  screen.h  screen.m  scroll-view.h  scroll-view.m  text-input.h  text-input.m  text.h  text.m  video.h  video.m  view.h  view.m  web-view.h  web-view.m  window.h  window.m
src/linux/: fx.c  fx.h  image.c  image.h  node.c  platform.c  platform.h  screen.c  screen.h  scroll-view.c  scroll-view.h  text-input.c  text-input.h  text.c  text.h  video.c  video.h  view.c  view.h  web-view.c  web-view.h  window.c  window.h
src/shared/: channel.c  channel.h  fx.c  fx.h  platform.h
src/shared/bridge/: Makefile  bridge.mjs  package.json
src/shared/bridge/darwin/: bridge.h  bridge.mjs
src/shared/bridge/edge/: bridge.h  bridge.mjs
src/shared/bridge/webkit/: bridge.h  bridge.mjs
src/win32/: fx.c  fx.cc  fx.h  fx.manifest  image.c  image.cc  image.h  install.cc  node.c  node.cc  platform.cc  platform.h  screen.cc  screen.h  scroll-view.c  scroll-view.cc  scroll-view.h  shared.h  text-input.c  text-input.cc  text-input.h  text.c  text.cc  text.h  video.c  video.cc  video.h  view.c  view.cc  view.h  web-view.c  web-view.cc  web-view.h  window.c  window.cc  window.h  winui.h
test/: CMakeLists.txt  image.c  message.c  scroll-view.c  text-input.c  text.c  video.c  web-view-message.c  web-view.c  window-no-frame.c  window-screen-size.c  window.c
test/fixtures/images/: Makefile  image1.h
test/image/: basic.c
test/scroll-view/: basic.c
test/text/: basic.c  used-bounds.c
test/text-input/: basic.c
test/video/: basic.c  no-controls-loop.c  no-controls.c
test/web-view/: basic.c  message.c
test/window/: basic.c  destroy-on-close.c  multiple.c  no-frame.c  no-resize.c  screen-center.c  screen-size.c  title.c
